force-app/main/default/objects/Agency_Zip_Code_Assignment__c/Agency_Zip_Code_Assignment__c.object-meta.xml
<CustomObject>
    <description>This is a setup object which will be used to assign the agencies contact based on the zip codes</description>
    <label>Agency Zip Code Assignment</label>
    <nameField>
        <label>Agency Zip Code Assignment Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agencies Zip Code Assignment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>