force-app/main/default/objects/Agency_Zip_Code_Assignment__c/fields/ASRep__c.field-meta.xml
<CustomField>
    <fullName>ASRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be used to show which Account is the ASRep for the current zip code and region</description>
    <inlineHelpText>ASRep Account</inlineHelpText>
    <label>ASRep</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ASRep_Account</relationshipLabel>
    <relationshipName>ASRep_Account</relationshipName>
    <type>Lookup</type>
</CustomField>