force-app/main/default/objects/Agency_Zip_Code_Assignment__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>This field will be used to show the County for the region.</description>
    <inlineHelpText>County</inlineHelpText>
    <label>County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>