force-app/main/default/objects/Agency_Zip_Code_Assignment__c/fields/DXVRep__c.field-meta.xml
<CustomField>
    <fullName>DXVRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be used to show which Account is the DXVRep for the current zip code and region</description>
    <inlineHelpText>DXVRep Account</inlineHelpText>
    <label>DXVRep</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DXVRep_Account</relationshipLabel>
    <relationshipName>DXVRep_Account</relationshipName>
    <type>Lookup</type>
</CustomField>