force-app/main/default/objects/Agency_Zip_Code_Assignment__c/fields/FiatRep__c.field-meta.xml
<CustomField>
    <fullName>FiatRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be used to show which Account is the FiatRep for the current zip code and region</description>
    <inlineHelpText>FiatRep Account</inlineHelpText>
    <label>FiatRep</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FiatRep_Account</relationshipLabel>
    <relationshipName>FiatRep_Account</relationshipName>
    <type>Lookup</type>
</CustomField>