force-app/main/default/objects/Agency_Zip_Code_Assignment__c/fields/GroheRep__c.field-meta.xml
<CustomField>
    <fullName>GroheRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be used to show which Account is the GroheRep for the current zip code and region</description>
    <inlineHelpText>GroheRep Account</inlineHelpText>
    <label>GroheRep</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GroheRe_Account</relationshipLabel>
    <relationshipName>GroheRep_Account</relationshipName>
    <type>Lookup</type>
</CustomField>