force-app/main/default/objects/Agency_Zip_Code_Assignment__c/fields/PrimaryCity__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCity__c</fullName>
    <description>This field will be used to show the Primary city for the region.</description>
    <inlineHelpText>Primary City</inlineHelpText>
    <label>Primary City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>