force-app/main/default/objects/Agency_Zip_Code_Assignment__c/fields/Recalculate_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Recalculate_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used to recalculate the agencies, and will update the record under the account.</description>
    <inlineHelpText>Check this box if recalculation required. 
NOTE: recalculation may take time to be completely processed due to volume of data.</inlineHelpText>
    <label>Recalculate Assignment</label>
    <type>Checkbox</type>
</CustomField>