force-app/main/default/objects/Agency_Zip_Code_Assignment__c/fields/SecondaryCities__c.field-meta.xml
<CustomField>
    <fullName>SecondaryCities__c</fullName>
    <description>This field will be used to show the Secondary Cities for the region.</description>
    <inlineHelpText>Secondary Cities</inlineHelpText>
    <label>Secondary Cities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>