force-app/main/default/objects/Agency_Zip_Code_Assignment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This picklist will be used to show the Type of the zip code</description>
    <inlineHelpText>Type of ZipCode</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PO BOX</fullName>
            </value>
            <value>
                <fullName>STANDARD</fullName>
            </value>
            <value>
                <fullName>UNIQUE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>