force-app/main/default/objects/Agency_Zip_Code_Assignment__c/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <description>This field will be used to store the zip code for the agency assginment</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique Zip Codes</inlineHelpText>
    <label>Zip Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>