force-app/main/default/objects/Agency_Zip_Code_Assignment__c/validationRules/Recalculation_only_allowed_on_update.validationRule-meta.xml
<ValidationRule>
    <fullName>Recalculation_only_allowed_on_update</fullName>
    <active>true</active>
    <description>This rule will make sure that user cannot mark the recalculation check box true on insert.</description>
    <errorConditionFormula>AND( 
    ISNEW(),  
    Recalculate_Assignment__c 
)</errorConditionFormula>
    <errorDisplayField>Recalculate_Assignment__c</errorDisplayField>
    <errorMessage>Recalculation can only used after record has been created.</errorMessage>
</ValidationRule>