force-app/main/default/objects/Agency_Zip_Code_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ZipCode__c</columns>
    <columns>Type__c</columns>
    <columns>Region__c</columns>
    <columns>DXVRep__c</columns>
    <columns>FiatRep__c</columns>
    <columns>GroheRep__c</columns>
    <columns>ASRep__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>